# ml-adp

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  README.rst  devbox.json  pyproject.toml
doc/: .readthedocs.yaml  conf.py  guide.rst  hybrid-now.py  hybrid.py  index.rst  installation.rst  naive.py  nncont-pi.py  policyiteration.py  requirements.txt
doc/_templates/: autotoc_class.rst  custom_class.rst  custom_module.rst
doc/algos/: hybridnow.py  naive.py  nn_contpi.py
doc/examples/: index.rst  linear_quadratic.ipynb  option_hedging.ipynb  quadratic_approximation.ipynb
doc/source/: conf.py  guide.rst  index.rst  installation.rst
doc/source/_templates/autosummary/: class.rst  module.rst
doc/source/algos/: hybridnow.py  naive.py  nn_contpi.py
doc/source/api/: .gitignore
doc/source/examples/: bdse.ipynb  bsde.ipynb  energy_storage.ipynb  option_hedging.ipynb
src/ml_adp/: __init__.py  base.py  cost.py  finance.py  nn.py
src/ml_adp/mapping/: __init__.py  convex.py  linear.py
src/ml_adp/model/: __init__.py  finance.py  linear_quadratic.py
src/ml_adp/utils/: __init__.py  _repr.py  fnn.py  nn.py
