[tool.poetry]
name = "ml-adp"
version = "0.3.0-alpha.0"
description = ""
authors = ["Ruben Wiedemann <r.wiedemann@campus.lmu.de>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
torch = "1.11.0"
numpy = "1.21.6"
matplotlib = "3.5.2"
ipykernel = {version = "^6.4.1", optional = true}

[tool.poetry.extras]
jupyter = ["ipykernel"]


[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^0.5.2"
sphinx-math-dollar = "^1.2"
numpydoc = "^1.1.0"
sphinx-autodoc-typehints = "^1.12.0"
nbsphinx = "^0.8.7"
optuna = "^2.10.0"
tqdm = "^4.62.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
