[tool.poetry]
name = "ml-adp"
version = "0.3.0a1"
description = "Pytorch-Native Approximate Dynamic Programming for Discrete-Time Stochastic Optimal Control"
authors = ["Ruben Wiedemann <rw5739@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "^2.0.1"
matplotlib = "^3.6.3"
numpy = "^1.24.1"

[tool.poetry.group.doc.dependencies]
Sphinx = "^5.1.1"
numpydoc = "^1.5.0"
sphinx-autodoc-typehints = "^1.21.1"
nbsphinx = "^0.8.11"
sphinx-math-dollar = "^1.2.1"
sphinx-rtd-theme = "^1.1.1"
autoclasstoc = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
tqdm = "^4.64.1"
ipywidgets = "^8.0.2"
optuna = "^3.0.5"
einops = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
